--- a/index2.html
+++ b/index2.html
@@ -38,7 +38,7 @@
                 <option value="Nicole Pagnoni">Nicole Pagnoni</option>
                 <option value="Pamela Volek">Pamela Volek</option>
             </select>
-            <input type="text" name="property-address" placeholder="Property Address" title="Sale Propery Address">
+            <input type="text" name="property-address" placeholder="Property Address" title="Sale Property Address">
             <input type="number" name="purchase-price" id="purchase-price" placeholder="Purchase Price (no dollar sign or decimals ex 345900)" title="Sale Purchase Price"required>
         <!-- <input type="number" name="field3" placeholder="Website" /> 
     <textarea placeholder="Message" onkeyup="adjust_textarea(this)"></textarea> -->
