complete form cache and separate js files

--- a/index2.html
+++ b/index2.html
@@ -56,7 +56,7 @@
             <label for="loan-amount"><input type="number" name="loan-amount" placeholder="Amount of loan with no decimals (ex. 329000)" onchange="calculate();"> </label>
             <label for="apr"><input type="number" name="apr" placeholder="Enter APR amount (ex. .25)"></label>
             <label for="repayment-period"><input type="number" name="repayment-period" id="repayment-period" placeholder="Enter the Repayment Period in Years (ex. 25)"></label>
-            <label for="calculate-button"><input type="button" class="btn" value="Calculate Loan"></label>
+            <label for="calculate-button"><input type="button" id="loan-btn" class="btn" value="Calculate Loan"></label>
             <div class="loan-results-container">
                 <h2 id="loan-results-heading" class="heading">Loan Results</h2>
                 <table>                
