cache DOM elements

--- a/index2.html
+++ b/index2.html
@@ -25,7 +25,7 @@
             </select></label>
 
             <select title="Choose an Agent">
-                <option value="sandy-bator">Choose An Agent</option>
+                <option value="choose">Choose An Agent</option>
                 <option value="sandy-bator">Sandra A. Bator</option>
                 <option value="camille-simms">Camille Simms</option>
                 <option value="patrick-meehan">Patrick Meehan</option>
@@ -95,6 +95,6 @@
     
     <script src="app.js"></script>
     <!--<script src="main.js"></script>-->
-    </body>
+    </body> 
     
     </html>
