--- a/index2.html
+++ b/index2.html
@@ -6,7 +6,7 @@
    
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Udemy Course _ Practice JavaScript</title>
+    <title>Commission & Mortgage Calculator Web</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="styles2.css" />
 
