--- a/index2.html
+++ b/index2.html
@@ -100,9 +100,9 @@
         <canvas id="graph" width="400" height="250"></canvas> </td>
     </tr> -->
     
-    <!-- <script src="app.js"></script> -->
-    <script src="index.js"></script>
-    <!--<script src="main.js"></script>-->
+    <script src="app.js"></script>
+    <!-- <script src="index.js"></script> -->
+  
     </body> 
     
     </html>
