--- a/index2.html
+++ b/index2.html
@@ -14,7 +14,7 @@
     COMMISSION CALCULATOR -->
     <div class="commission-calc-container">       
         <form method="GET" id="commission-form" class="form-style">
-            <h2 id="commission-form-heading" class="heading">Calculate Your Commission</h2>
+            <h2 id="commission-form-heading" class="heading">Commission Calculator</h2>
             
             <label for="agent-name">
                 <input type="text" name="agent-name" placeholder="Agent Name" title="Agent Name">
