update loan calculations

--- a/index2.html
+++ b/index2.html
@@ -62,20 +62,20 @@
             <label for="apr">
                 <select title="Loan APR" id="apr" required>
                     <option value="Loan apr">Loan APR</option>
-                    <option value=".01">1%</option>
-                    <option value=".015">1.5%</option>
-                    <option value=".02">2%</option>
-                    <option value=".025">2.5%</option>
-                    <option value=".03">3%</option>
-                    <option value=".035">3.5%</option>
-                    <option value=".04">4%</option>
-                    <option value=".045">4.5%</option>
-                    <option value=".05">5%</option>
-                    <option value=".055">5./5%</option>
-                    <option value=".06">6%</option>
-                    <option value=".065">6.5%</option>
-                    <option value=".07">7%</option>
-                    <option value=".075">7.5%</option>                   
+                    <option value="1">1%</option>
+                    <option value="1.5">1.5%</option>
+                    <option value="2">2%</option>
+                    <option value="2.5">2.5%</option>
+                    <option value="3">3%</option>
+                    <option value="3.5">3.5%</option>
+                    <option value="4">4%</option>
+                    <option value="4.5">4.5%</option>
+                    <option value="5">5%</option>
+                    <option value="5.5">5.5%</option>
+                    <option value="6">6%</option>
+                    <option value="6.5">6.5%</option>
+                    <option value="7">7%</option>
+                    <option value="7.5">7.5%</option>                   
                 </select>
             </label>
 
